<resources>
    <string name="app_name">Iniciando com Espresso</string>
    <string name="title">Login inválido</string>
    <string name="message">Login e/ou senha inválidos</string>
    <string name="ok">OK</string>
</resources>
